add a thank you page

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -76,12 +76,12 @@
 		{% block content %}{% endblock %}
 		{% block footer %}
 		<footer class="footer">
-			<!--<div class="container">
+			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-md-12">
 					</div>
 				</div>
-			</div>-->
+			</div>
 		</footer>
 		{% endblock %}
 	</body>
