--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -33,17 +33,17 @@
 		<!-- CSS -->
 		<link rel="stylesheet" href="{% static 'bower_components/medium-editor/dist/css/medium-editor.min.css' %}">
 		<link rel="stylesheet" href="{% static 'bower_components/medium-editor/dist/css/themes/default.css' %}">
-		<link rel="stylesheet" href="{% static 'bower_components/medium-editor-insert-plugin/dist/css/medium-editor-insert-plugin.min.css' %}">
+		<!--<link rel="stylesheet" href="{% static 'bower_components/medium-editor-insert-plugin/dist/css/medium-editor-insert-plugin.min.css' %}">-->
 
 		<!-- JS -->
-		<script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+		<!--<script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>-->
 		<script src="{% static 'bower_components/medium-editor/dist/js/medium-editor.js' %}"></script>
-		<script src="{% static 'bower_components/handlebars/handlebars.runtime.min.js' %}"></script>
+		<!--<script src="{% static 'bower_components/handlebars/handlebars.runtime.min.js' %}"></script>
 		<script src="{% static 'bower_components/jquery-sortable/source/js/jquery-sortable-min.js' %}"></script>
 		<script src="{% static 'bower_components/blueimp-file-upload/js/vendor/jquery.ui.widget.js' %}"></script>
 		<script src="{% static 'bower_components/blueimp-file-upload/js/jquery.iframe-transport.js' %}"></script>
 		<script src="{% static 'bower_components/blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
-		<script src="{% static 'bower_components/medium-editor-insert-plugin/dist/js/medium-editor-insert-plugin.min.js' %}"></script>
+		<script src="{% static 'bower_components/medium-editor-insert-plugin/dist/js/medium-editor-insert-plugin.min.js' %}"></script>-->
 
 
 
