--- a/templates/map/ugc_thanks.html
+++ b/templates/map/ugc_thanks.html
@@ -8,10 +8,10 @@
 			<div class="col-md-12">
 				<h1 class="text-center">Thank You.</h1>
 				<br />
-				<p class="text-center">Your content will be added to the website shortly.</p>
+				<p class="text-center">Your content will be added to the map shortly</p>
 				<p class="text-center">
 					<a href="{% url 'detail' feature.id %}" class="btn btn-default btn-lg">Return to {{ feature }}</a> 
-					<a href="#" class="btn btn-default btn-lg">Your Content</a>
+					<a href="{% url 'user_overview' user.username %}" class="btn btn-default btn-lg">See All Your Content</a>
 				</p>
 			</div>
 		</div>
