--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -2,13 +2,13 @@
 	<button type="button" class="btn btn-default btn-xs close-this"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 
 	{% if feature.thumbnail %}
-		{% if documents %}<a href="{% if documents %}{% url 'detail' feature.id %}{% else %}#{% endif %}"><img src="/media/{{ feature.thumbnail }}"></a>{% else %}<img src="/media/{{ feature.thumbnail }}">{% endif %}
+		<a href="{% if documents %}{% url 'detail' feature.id %}{% else %}#{% endif %}"><img src="/media/{{ feature.thumbnail }}"></a>
 	{% endif %}
 
 	{% if feature.b_name %}
-		<p><span class="small">{% if documents %}<a href="{% url 'detail' feature.id %}">{{ feature.b_name }}</a>{% else %}{{ feature.b_name }}{% endif %}</span><br />
+		<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.b_name }}</a></span><br />
 		{% else %}
-		<p><span class="small">{% if documents %}<a href="{% url 'detail' feature.id %}">{{ feature.address }}{% else %}{{ feature.address }}{% endif %}</a></span><br />
+		<p><span class="small"><a href="{% url 'detail' feature.id %}">{{ feature.address }}</a></span><br />
 	{% endif %}
 	
 		{% if documents %}<span class="glyphicon glyphicon-file"></span> {% endif %}{% if feature.thumbnail %}<span class="glyphicon glyphicon-picture"></span> {% endif %}{% if stories %}<span class="glyphicon glyphicon-comment"></span> {% endif %}{% if user.is_authenticated %} <a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default btn-sm pull-right">Add Content</a>{% endif %}</p>
