--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -19,31 +19,9 @@
 		<!-- Custom styles -->
 		<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 		<!-- Medium Editor -->
-		<!--<script src="{% static 'js/medium-editor/medium-editor.js' %}"></script>
+		<script src="{% static 'js/medium-editor/medium-editor.js' %}"></script>
 		<link rel="stylesheet" href="{% static 'css/medium-editor/medium-editor.css' %}">
-		<link rel="stylesheet" href="{% static 'css/medium-editor/themes/default.css' %}">-->
-
-
-
-		<!-- Medium Editor and all its Associated Gubbins -->
-
-		<!-- Font Awesome for awesome icons. You can redefine icons used in a plugin configuration -->
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-		<!-- CSS -->
-		<link rel="stylesheet" href="{% static 'bower_components/medium-editor/dist/css/medium-editor.min.css' %}">
-		<link rel="stylesheet" href="{% static 'bower_components/medium-editor/dist/css/themes/default.css' %}">
-		<!--<link rel="stylesheet" href="{% static 'bower_components/medium-editor-insert-plugin/dist/css/medium-editor-insert-plugin.min.css' %}">-->
-
-		<!-- JS -->
-		<!--<script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>-->
-		<script src="{% static 'bower_components/medium-editor/dist/js/medium-editor.js' %}"></script>
-		<!--<script src="{% static 'bower_components/handlebars/handlebars.runtime.min.js' %}"></script>
-		<script src="{% static 'bower_components/jquery-sortable/source/js/jquery-sortable-min.js' %}"></script>
-		<script src="{% static 'bower_components/blueimp-file-upload/js/vendor/jquery.ui.widget.js' %}"></script>
-		<script src="{% static 'bower_components/blueimp-file-upload/js/jquery.iframe-transport.js' %}"></script>
-		<script src="{% static 'bower_components/blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
-		<script src="{% static 'bower_components/medium-editor-insert-plugin/dist/js/medium-editor-insert-plugin.min.js' %}"></script>-->
+		<link rel="stylesheet" href="{% static 'css/medium-editor/themes/default.css' %}">
 
 
 
@@ -78,7 +56,9 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-md-12">
+					<div class="col-xs-12">
+						<h4>The Survey of London Whitechapel Initiative is Supported by</h4>
+						<img src="{% static 'img/RGB-Portrait.gif' %}" alt="Arts and Humanities Research Council Logo" style="width: 100px;">
 					</div>
 				</div>
 			</div>
