--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -8,10 +8,10 @@
 		</div>
 		<div class="col-xs-12 col-md-7">
 			{% if feature.b_name %}
-			<h1>{{ feature.b_name }} {% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default">Add Content</a>{% endif %}</h1>
+			<h1>{{ feature.b_name }} {% if user.is_authenticated %}{% if not histories and not descriptions and not stories and not images and not media %}{% else %}<a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default">Add Content</a>{% endif %}{% endif %}</h1>
 			<h2><small>{{ feature.address }} {% if feature.original %}| Constructed <a href="{% url 'date_range' feature.original %}">{{ feature.original }}{% endif %}</a></small> <a href="{% url 'home' %}?highlight={{ feature.id }}" class="btn btn-default btn-sm">Show on Map</a> {% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %} </h2>
 			{% else %}
-			<h1>{{ feature.address }} {% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default">Add Content</a>{% endif %}</h1>
+			<h1>{{ feature.address }} {% if user.is_authenticated %}{% if not histories and not descriptions and not stories and not images and not media %}{% else %}<a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default">Add Content</a>{% endif %}{% endif %}</h1>
 			{% endif %}
 		</div>
 		<div class="col-xs-2">
@@ -20,9 +20,17 @@
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-xs-12 col-md-7">
+		{% if not histories and not descriptions and not stories and not images and not media %}
+			<hr />
+			<h2>We Don't Have Any Information About This Place Yet</h2>
+			<p>Do you know about the history of this building or the people who have lived or worked here? <a href="{% url 'ugc_choice' feature.id %}">Contribute it here.</a></p>
+
+		{% else %}
+
+
 			<ul class="nav nav-tabs" role="tablist" id="docTabs">
 				{% if histories %}
-				<li role="presentation" {% if not stories and not descriptions and not images %}{% else %}class="active"{% endif %}><a href="#history" aria-controls="history" role="tab" data-toggle="tab">History</a></li>
+				<li role="presentation" class="active"><a href="#history" aria-controls="history" role="tab" data-toggle="tab">History</a></li>
 				{% endif %}
 				{% if descriptions %}
 				<li role="presentation" {% if not histories %}class="active"{% endif %}><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Description</a></li>
@@ -43,8 +51,6 @@
 		<div class="col-md-3" id="fixed-nav">
 			<ul data-spy="affix" data-offset-top="300" data-offset-bottom="0" class="nav nav-stacked hidden-sm hidden-xs">
 			{% if histories %}
-				{% if not stories and not descriptions and not images %}
-				{% else %}
 					{% for document in histories %}
 						{% if document.start_year %}
 							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
@@ -52,7 +58,6 @@
 							<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
 						{% endif %}
 					{% endfor %}
-				{% endif %}
 			{% endif %}
 			{% if descriptions %}
 				{% if not histories %}
@@ -81,7 +86,7 @@
 		<div class="col-xs-12 col-md-7 feature-detail">
 			<div class="tab-content">
 				{% if histories %}
-					<div role="tabpanel" class="tab-pane{% if not stories and not descriptions and not images %}{% else %} active{% endif %}" id="history">
+					<div role="tabpanel" class="tab-pane active" id="history">
 					{% for document in histories %}
 						<div class="document">
 							<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
@@ -140,6 +145,7 @@
 				{% endif %}
 
 			</div>
+		{% endif %} 
 		</div>
 		<div class="col-xs-12 col-md-2">
 			{% if similar %}
@@ -158,7 +164,7 @@
 				{% endfor %}
 				</ul>
 			{% endif %}
-			{% if feature.tags %}
+			{% if feature.tags|length > 0 %}
 				<h4>Tags</h4>
 				{% for tag in feature.tags.all %}
 					<a href="{% url 'tag' tag %}" class="btn btn-default btn-xs tag">{{ tag }}</a> 
@@ -222,27 +228,28 @@
 		}
 	})
 
-	// Enable link to tab
+	// Activate correct tab and window location when linked to from another page
 	var url = document.location.toString();
 	if (url.match('#')) {
-		window.scroll(0, 0);
-		var anchor = url.split('#')[1];
-	    $('#docTabs a[href="#'+url.split('#')[1]+'"]').tab('show');
-	    if (anchor == 'description') {
+		var tabAnchor = url.split('#')[1];
+		var docAnchor = url.split('?')[1];
+		tabAnchor = tabAnchor.split('?')[0];
+		tabAnchor = tabAnchor.toLowerCase();
+	    if (tabAnchor == 'description') {
 	    	$('#fixed-nav ul').html(descriptionNav);
-	    } else if ($(this).html() == 'History') {
+	    } else if (tabAnchor == 'history') {
 			$('#fixed-nav ul').html(historyNav);
-		} else if ($(this).html() == 'Stories') {
+		} else if (tabAnchor == 'story') {
 			$('#fixed-nav ul').html(storyNav);
 		} else {
 			$('#fixed-nav ul').html('');
 		}
 	    $(document).ready(function() {
-			window.scroll(0,0);
+	    	var activeTab = '#docTabs a[href="#' + tabAnchor +'"]';
+			$(activeTab).tab('show');
+			location.hash = '#' + docAnchor;
 		})
 	}
-
-
 
 	// Change hash for page-reload
 	$('#docTabs a').on('show.bs.tab', function (e) {
