--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -21,7 +21,7 @@
 				{{ form|crispy }}
 			</div>
 			<div class="col-md-3">
-				<input type="submit" name="submit" value="Save" class="btn btn-default"/>
+				<input type="submit" name="submit" value="Save Draft" class="btn btn-default"/>
 				<input type="submit" name="publish" value="Submit" class="btn btn-primary"/>
 				
 			</div>
