--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -42,9 +42,12 @@
 				        <button type="submit" class="btn btn-default search">Submit</button>
 			      	</form>
 			      	<ul class="nav navbar-nav navbar-right">
+	    				<li><a href="/">Home</a></li>
 	    				<li><a href="{% url 'map.views.home' %}">Map</a></li>
 	    				{% if user.is_authenticated %}
 	    				<li><a href="{% url 'user_overview' user.username %}"><span class="glyphicon glyphicon-user"></span></a></li>
+	    				{% else %}
+	    				<li><a href="#">Log In</a></li>
 	    				{% endif %}
 	    			</ul>
 	    		</div>
