--- a/templates/map/ugc_thanks.html
+++ b/templates/map/ugc_thanks.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="jumbotron ugc-jumbotron" style="background-image: url('/media/{{ feature.banner }}');">
+<div class="jumbotron ugc-jumbotron" style="background-image: url('/media/{{ feature.thumbnail }}');">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
