--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -31,12 +31,12 @@
 				{% if document.published == True %}
 				<div class="{% cycle 'col-xs-12' 'col-xs-12 col-md-6' 'col-xs-12 col-md-6' %}">
 					<h3><a href="{% url 'detail' document.feature.id %}#{{ document.document_type }}?{{ document.title|slugify }}">{{ document.title }}</a><br /><span class="small"><a href="{% url 'all_content_by_author' document.author.id %}">{{ document.author.userprofile.display_name }}</a> | {{ document.last_edited }}</span></h3>
-					{{ document.body|safe|truncatechars_html:140 }}
+					{{ document.body|safe|truncatewords_html:40 }} <a href="{% url 'detail' document.feature.id %}#{{ document.document_type }}?{{ document.title|slugify }}">Read More...</a>
 				</div>
 				{% endif %}
 				{% endfor %}
 			</div>
-		</div><!-- / Featured Content -->
+		</div><!-- / Featured Contributions -->
 		
 		<div class="col-xs-12 col-md-4"><!-- Latest Images -->
 			<h1 class="front-page-heading">Latest Images</h1>
@@ -48,7 +48,7 @@
 				</div>
 				<div class="media-body">
 					<h4 class="media-heading"><a href="{% url 'detail' image.feature.id %}#images">{{ image.feature }}</a><br /><span class="text-muted">{{ image.title }}</span></h4>
-					<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{{ image.author.userprofile.display_name }}</a> | {{ image.last_edited }}</span>
+					<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a> | {{ image.last_edited }}</span>
 				</div>
 			</div>
 			{% endfor %}
@@ -57,12 +57,12 @@
 
 	<div class="row front-page-media"><!-- Featured Media -->
 		<div class="col-xs-12">
-			<h1 class="front-page-heading">Interviews</h1>
+			<h1 class="front-page-heading">Video and Audio</h1>
 		</div>
-		<div class="col-xs-12 col-md-6">
 		{% load embed_video_tags %}
-			<div class="row">
-				{% for embed in page.media.all %}
+		<div class="row">
+			{% for embed in page.media.all %}
+			<div class="col-xs-12 col-md-6">
 				<div class="col-xs-12 col-md-4">
 					<h3>{{ embed.title }}</h3>
 					<div>{{ embed.description|safe }}</div>
@@ -72,8 +72,8 @@
 						{% video embed.url 'large' %}
 					</div>
 				</div>
-				{% endfor %}
 			</div>
+			{% endfor %}
 		</div>
 	</div>
 
@@ -87,36 +87,16 @@
 	
 	<div class="row themed-content">
 		{% for category in categories %}
-		{% if category.thumbnail and category.feature_set.all|length > 0 %}
 		<div class="col-xs-12 col-md-4">
 			<div>
-				<a href="{% url 'map.views.category' category.id %}"><img src="/media/{{ category.thumbnail }}"></a>
+				<a href="{% url 'map.views.category' category.id %}"><img src="{% thumbnail category.thumbnail 360x204 %}"></a>
 				<p><a href="{% url 'map.views.category' category.id %}">{{ category.name }}</a></p>
 			</div>
 		</div>
-		{% endif %}
 		{% endfor %}
 	</div><!-- / Themed Content -->
 	{% endif %}
-
-	<div class="row"><!-- Places -->
-		<div class="col-xs-12">
-			<h2 class="front-page-heading">Places</h2>
-			<br />
-		</div>
-	</div>
-
-	<div class="row featured-content">
-		{% for feature in features %}
-		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div>
-				<a href="{% url 'map.views.detail' feature.id %}"><img src="/media/{{ feature.thumbnail }}"></a>
-				<p><a href="{% url 'map.views.detail' feature.id %}">{{ feature.b_name }}</a></p>
-			</div>
-		</div>
-		{% endfor %}
-	</div><!-- Places -->
-</div>
+</div><!-- / Container -->
 
 {% endblock %}
 
