--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -47,7 +47,7 @@
 	    				{% if user.is_authenticated %}
 	    				<li><a href="{% url 'user_overview' user.username %}"><span class="glyphicon glyphicon-user"></span></a></li>
 	    				{% else %}
-	    				<li><a href="#">Log In</a></li>
+	    				<li><a href="/accounts/login/">Log In</a></li>
 	    				{% endif %}
 	    			</ul>
 	    		</div>
