added a user profile edit page, trying to figure out how to let people login and go straight back to where they logged in from so it's not annoying.

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,7 +9,7 @@
 <div class="login-page-container">
   <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-offset-4 card login-dialogue">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3 login-dialogue">
       <h3>{% trans "Log in" %} to {{ site.name }}</h3>
 
       {% get_providers as socialaccount_providers %}
