--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
 <div class="login-page-container">
 	<div class="container">
 	  	<div class="row">
-	    	<div class="col-xs-12 col-md-4 col-md-offset-4 login-dialogue">
+	    	<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3 login-dialogue">
 				<h3>{% trans "Sign Up" %}</h3>
 
 				<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
