--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -44,21 +44,23 @@
 			      	<ul class="nav navbar-nav navbar-right">
 	    				<li><a href="/">Home</a></li>
 	    				<li><a href="{% url 'map.views.home' %}">Map</a></li>
-	    				{% if user.is_authenticated %}
-	    				<!--<li><a href="{% url 'user_overview' user.username %}"><span class="glyphicon glyphicon-user"></span></a></li>-->
-	    				<form class="navbar-form navbar-right">
-		    				<div class="btn-group">
-							  	<a href="{% url 'user_overview' user.username %}" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-user"></span></a>
-							  	<button type="button" class="btn btn-default dropdown-toggle navbar-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+						{% if user.is_authenticated %}
+	    				<li>
+		    				<div class="btn-group navbar-btn" role="group" aria-label="button group">
+							  	<a href="{% url 'user_overview' user.username %}" class="btn btn-default">{% if user.userprofile.display_name %}{{ user.userprofile.display_name }}{% else %}{{ user }}{% endif %} <span class="glyphicon glyphicon-user"></span></a>
+							  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
 								<ul class="dropdown-menu pull-right">
-								    <li><a href="#">Edit Profile</a></li>
+								    <li><a href="{% url 'user_profile' %}">Edit Profile</a></li>
+								    {% if user.is_staff %}
+									<li><a href="/admin/">Go to Admin Site</a></li>
+									{% endif %}
 								    <li role="separator" class="divider"></li>
 									<li><a href="{% url 'account_logout' %}">Logout</a></li>
 								</ul>
 							</div>
-						</form>
+						</li>
 	    				{% else %}
-	    				<li><a href="/accounts/login/">Log In</a></li>
+	    				<li><a href="{% url 'account_login' %}">Log In</a></li>
 	    				{% endif %}
 	    			</ul>
 	    		</div>
