--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -13,7 +13,7 @@
 	{% endif %}
 	
 		{% if documents %}<a href="{% url 'detail' feature.id %}"><span class="glyphicon glyphicon-file"></span></a> {% endif %}{% if images %}<a href="{% url 'detail' feature.id %}#images"><span class="glyphicon glyphicon-picture"></span></a> {% endif %}{% if stories %}<span class="glyphicon glyphicon-comment"></span> {% endif %}{% if media %}<a href="{% url 'detail' feature.id %}#media"><span class="glyphicon glyphicon-play"></span> {% endif %}
-		<span class="pull-right">{% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a> {% endif %}{% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}" class="btn btn-default btn-sm">Add Content</a>{% endif %} </span></p>
+		<span class="pull-right">{% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a> {% endif %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> </span></p>
 	
 	<script>
 		$('.close-this').click(function() {
