--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -9,7 +9,7 @@
 		<br />
 		<div class="text-center">
 			<a href="{% url 'map.views.home' %}" class="btn btn-primary btn-lg">Explore the Map</a>
-			<a href="#" class="btn btn-primary btn-lg">Contribute</a>
+			<a href="#" class="btn btn-primary btn-lg">Start Contributing</a>
 		</div>
 	</div>
 </div>
