more tweaks to login ux flow. Added pages functionality and menu context processor

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,38 +7,44 @@
 
 {% block content %}
 <div class="login-page-container">
-  <div class="container">
+<div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3 login-dialogue">
-      <h3>{% trans "Log in" %} to {{ site.name }}</h3>
+    <div class="col-xs-12 col-md-8 col-md-offset-2 login-dialogue">
+        <div class="row">
+          <div class="col-xs-12 col-md-7">
+          <h3>Contribute to Survey of London Whitechapel</h3>
+          <hr>
+          <p>This website is a collaboration between Survey of London and you, the reading public.</p>
+          <p>To start contributing, sign in with your existing social media account, or <a href="{{ signup_url }}">sign up here</a>.</p>
+          </div>
+        <div class="col-xs-12 col-md-5">
+        <h3>Sign In</h3>
 
-      {% get_providers as socialaccount_providers %}
+        {% get_providers as socialaccount_providers %}
 
-      {% if socialaccount_providers %}
-      <div class="socialaccount_ballot">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-        <hr />
-      </div>
+        {% if socialaccount_providers %}
+        <div class="socialaccount_ballot">
+          {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+          <hr />
+        </div>
 
-      {% include "socialaccount/snippets/login_extra.html" %}
+        {% include "socialaccount/snippets/login_extra.html" %}
 
-      {% else %}
-      <p>{% blocktrans %}If you have not created an account yet, then please
-      <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-      {% endif %}
-
-      <form class="login" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {% load crispy_forms_tags %}
-        {{ form|crispy }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% else %}
+        <p>{% blocktrans %}If you have not created an account yet, then please
+        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
         {% endif %}
-        <a class="btn btn-default" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-      </form>
-      <hr />
-      <p>Don't have an account? <a href="{{ signup_url }}">Sign up here</a>.</p>
+
+        <form class="login" method="POST" action="{% url 'account_login' %}">
+          {% csrf_token %}
+          {% load crispy_forms_tags %}
+          {{ form|crispy }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <a class="btn btn-default" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+          <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+        </form>
     </div>
   </div>
   </div>
