--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -8,8 +8,7 @@
 		<h2 class="text-center">{{ page.title }}</h2>
 		<br />
 		<div class="text-center">
-			<a href="{% url 'map.views.home' %}" class="btn btn-primary btn-lg">Explore the Map</a>
-			<a href="#" class="btn btn-primary btn-lg">Start Contributing</a>
+			<a href="{% url 'map_home' %}" class="btn btn-primary btn-lg">Explore the Map</a>
 		</div>
 	</div>
 </div>
