--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -337,7 +337,7 @@ footer.editor-help {
 	box-shadow: 0px 1px 5px black;
 }
 
-.login-dialogue p {
+p.login-dialogue-text {
 	font-size: 16px;
 	margin-bottom: 10px;
 }
@@ -348,7 +348,12 @@ footer.editor-help {
 	background-size: cover;
 	height: 100%;
 }
-
 .dropdown-menu li {
 	font-size: 14px;
+}
+.navbar-nav.navbar-right {
+	margin-right: 0;
+}
+.login-dialogue .lead {
+	font-size: 170%;
 }
