--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,11 +8,8 @@
 <div class="login-page-container">
 	<div class="container">
 	  	<div class="row">
-	    	<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3 login-dialogue">
-				<h3>{% trans "Sign Up" %}</h3>
-
-				<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
+	    	<div class="col-xs-12 col-md-4 col-md-offset-4 login-dialogue">
+				<h3>Sign Up</h3>
 				<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
 					  {% csrf_token %}
 					  {% load crispy_forms_tags %}
@@ -22,6 +19,7 @@
 					  {% endif %}
 					  <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
 				</form>
+				<p class="login-dialogue-text">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 			</div>
 		</div>
 	</div>
